# git-smart-checkout

./: Cargo.toml  LICENSE  README.md  upload.sh
.github/workflows/: publish.yml  rust.yml
Formula/: git-smart-checkout.rb
src/: git.rs  git_client.rs  interactions.rs  main.rs
src/git/: client.rs  utils.rs
src/git_client/: git_branch.rs  utils.rs
