[package]
name = "git-smart-checkout"
version = "0.1.0"
authors = ["Cezar Craciun"]
description = """
A better way of switching git branches.
"""
keywords = ["git", "branch", "checkout", "fuzzy"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = {version="0.9.0", features=["fuzzy-select"]}
