[package]
name = "git-smart-checkout"
version = "0.1.3"
authors = ["Cezar Craciun"]
description = """
A better way of switching git branches.
"""
keywords = ["git", "branch", "checkout", "fuzzy"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = {version="0.10.1", features=["fuzzy-select"]}
ctrlc = { version = "3.0", features = ["termination"] }
anyhow = "1.0.0"
regex = "1.5.6"
itertools = "0.10.5"